<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/meeting_item"
    android:gravity="center"
    android:padding="@dimen/im_root_padding">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight = "0">
        <View
            android:id="@+id/meeting_item_room_im"
            android:layout_width="@dimen/im_room_image"
            android:layout_height="@dimen/im_room_image"
            android:background="@drawable/shape_room_item"
            android:backgroundTint="@color/colorPrimary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/room_color" />

        <TextView
            android:id="@+id/meeting_item_room_label_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/room"
            android:textColor="@color/dark_grey"
            android:textSize="@dimen/im_room_text"
            app:layout_constraintEnd_toEndOf="@+id/meeting_item_room_im"
            app:layout_constraintStart_toStartOf="@+id/meeting_item_room_im"
            app:layout_constraintTop_toTopOf="@+id/meeting_item_room_im"
            tools:viewBindingIgnore="true" />

        <TextView
            android:id="@+id/meeting_item_room_number_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_1"
            android:textColor="@color/dark_grey"
            android:textSize="@dimen/im_room_number_text"
            app:layout_constraintEnd_toEndOf="@+id/meeting_item_room_im"
            app:layout_constraintStart_toStartOf="@+id/meeting_item_room_im"
            app:layout_constraintBottom_toBottomOf="@+id/meeting_item_room_im"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight = "1"
        android:layout_marginHorizontal="@dimen/im_margin_horizontal"
        android:orientation="vertical">
        <TextView
            android:id="@+id/meeting_item_subject_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/subject"
            android:textColor="@color/colorOnSecondary"
            android:textSize="@dimen/im_title_text"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
            <TextView
                android:id="@+id/meeting_item_date_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight = "2"
                android:text="@string/_29_11_1990"
                android:textSize="@dimen/im_text" />
            <TextView
                android:id="@+id/meeting_item_time_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight = "3"
                android:text="@string/_10_30_12_00"
                android:textAlignment="textEnd"
                android:textSize="@dimen/im_text" />
        </LinearLayout>

        <TextView
            android:id="@+id/meeting_item_participant_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/participants"
            android:textSize="@dimen/im_text" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/meeting_item_remove_iv"
        android:layout_width="@dimen/im_remove_image"
        android:layout_height="@dimen/im_remove_image"
        android:layout_weight = "0"
        android:layout_marginEnd="@dimen/im_margin"
        android:contentDescription="@string/remove_meeting"
        app:srcCompat="@drawable/ic_bin"
        android:scaleType="fitXY"
        android:background="@null"
        android:tint="@color/grey"
        app:tint="@color/grey" />
</LinearLayout>