<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.add.AddMeetingActivity"
    android:padding="16dp">

    <EditText
        android:id="@+id/add_meeting_subject_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:autofillHints=""
        android:hint="@string/subject"
        android:inputType="text"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/add_meeting_date_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:autofillHints=""
        android:clickable="false"
        android:focusable="false"
        android:hint="@string/_29_11_1990"
        android:inputType="date"
        android:textSize="40sp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_meeting_subject_tv" />

    <EditText
        android:id="@+id/add_meeting_time_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:autofillHints=""
        android:clickable="false"
        android:focusable="false"
        android:gravity="center"
        android:hint="@string/_10h55"
        android:inputType="time"
        app:layout_constraintEnd_toStartOf="@+id/add_meeting_duration_et"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_meeting_date_et" />

    <EditText
        android:id="@+id/add_meeting_duration_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:autofillHints=""
        android:clickable="false"
        android:focusable="false"
        android:gravity="center"
        android:hint="@string/_10h55"
        android:inputType="time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/add_meeting_time_et"
        app:layout_constraintTop_toBottomOf="@+id/add_meeting_date_et" />

    <TextView
        android:id="@+id/add_meeting_room_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/affected_room_number_2"
        android:gravity="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_meeting_time_et" />

    <EditText
        android:id="@+id/add_meeting_participant_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:autofillHints=""
        android:hint="@string/participant_email"
        android:inputType="textEmailAddress"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/add_meeting_add_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_meeting_room_tv" />

    <ImageView
        android:id="@+id/add_meeting_add_btn"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:padding="5dp"
        android:layout_margin="5dp"
        android:src="@drawable/ic_add"
        app:tint="@color/blue"
        app:layout_constraintBottom_toBottomOf="@+id/add_meeting_participant_et"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/add_meeting_participant_et"
        android:contentDescription="@string/add_participant" />

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginVertical="5dp"
        android:background="@drawable/rounded_rectangle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_meeting_participant_et"
        tools:listitem="@layout/participant_item"/>



</androidx.constraintlayout.widget.ConstraintLayout>